[project]
name = 'gbrs'
version = '1.0.0'
description = 'A suite of tools for Reconstructing Genomes and Quantifying Allele Specific Expression from RNA-Seq data'

[project.scripts]
gbrs = 'gbrs.gbrs.commands:app'
emase = 'gbrs.emase.commands:app'

[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

