[project]
name = 'gbrs'
version = '1.1.0'
description = 'A suite of tools for Reconstructing Genomes and Quantifying Allele Specific Expression from RNA-Seq data'
authors = [
    {name = 'KB Choi'},
    {name = 'Matthew Vincent', email = 'matt.vincent@jax.org'},
    {name = 'Mike Lloyd', email = 'mike.lloyd@jax.org'}
]
maintainers = [
    {name = 'Matthew Vincent', email = 'matt.vincent@jax.org'},
    {name = 'Mike Lloyd', email = 'mike.lloyd@jax.org'}
]
readme = 'README.md'
dependencies = [
    'biopython==1.81',
    'matplotlib==3.7.1',
    'pysam==0.21.0',
    'rich==13.3.5',
    'scipy==1.10.1',
    'tables==3.8.0',
    'typer==0.9.0',
]

[project.urls]
repository = 'https://github.com/churchill-lab/gbrs'

[project.scripts]
gbrs = 'gbrs.gbrs.commands:app'
emase = 'gbrs.emase.commands:app'

[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
pythonpath = "src/"